Finish User Signup

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="center hero-unit">
-  <h1> Welcome to the Sample App</h1>
+  <h1> Welcome to the Marks App</h1>
   <h2> This is the home page for  <a href="http://www.facebook.com/markanthonyortega">Mark's</a> sample application.</h2>
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
