Add user microposts

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,21 @@
 <% provide(:title, 'Home') %>
 
-
+<% if signed_in? %>
+    <div class="row">
+      <aside class="span4">
+        <section>
+          <%= render 'shared/user_info' %>
+        </section>
+        <section>
+          <%= render 'shared/micropost_form' %>
+        </section>
+      </aside>
+      <div class="span8">
+        <h3> Micropost Feed </h3>
+        <%= render 'shared/feed' %>
+      </div>
+    </div>
+<% else %>
 <div class="center hero-unit">
   <h1> Welcome to the Marks App</h1>
   <h2> This is the home page for  <a href="http://www.facebook.com/markanthonyortega">Mark's</a> sample application.</h2>
@@ -9,3 +24,4 @@
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
 
+<% end %>
